@@ -37,11 +37,11 @@ if(CMAKE_CL_64)
     set(MSVC64 1)
 endif()
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang") # Clang or AppleClang (see CMP0025)
   set(CMAKE_COMPILER_IS_GNUCXX 1)
   set(CMAKE_COMPILER_IS_CLANGCXX 1)
 endif()
-if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+if(CMAKE_C_COMPILER_ID MATCHES "Clang") # Clang or AppleClang (see CMP0025)
   set(CMAKE_COMPILER_IS_GNUCC 1)
   set(CMAKE_COMPILER_IS_CLANGCC 1)
 endif()
